# ce

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
homework/: homework-1.ipynb  homework-2.ipynb
scripts/: 1.getting-started.ipynb  2.working-with-llms.ipynb
