[project]
name = "ce"
version = "0.1.0"
description = "Computing Essentials - Hands-on Python development course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.0.0",
    "numpy>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
